--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,9 @@
   </head>
 
   <body>
+    <%= link_to("All Restaurants", restaurants_path) %>
+    <%= link_to("High Dollar Restaurants", high_dollar_restaurants_path) %>
+
     <%= yield %>
   </body>
 </html>
