--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,8 @@
   <body>
     <%= link_to("All Restaurants", restaurants_path) %>
     <%= link_to("High Dollar Restaurants", high_dollar_restaurants_path) %>
+    <%= link_to("New Restaurant", new_restaurant_path) %>
+
 
     <%= yield %>
   </body>
