--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -3,3 +3,9 @@
 
 <p> <%= @restaurant.description %></p>
 
+
+<%= link_to("Edit Restaurant", edit_restaurant_path(@restaurant)) %>
+<%= link_to("Delete Restaurant", restaurant_path(@restaurant), method:"delete") %>
+
+
+
