--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -1,8 +1,22 @@
 <h1>New Restaurant</h1>
 
+<% if @restaurant.errors.any? %>
+  <div id="error_explanation">
+    <h2><%= pluralize(@restaurant.errors.count, "error") %> prohibited this restaurant from being saved:</h2>
+
+    <ul>
+      <% @restaurant.errors.each do |error| %>
+        <li><%= error.full_message %></li>
+      <% end %>
+    </ul>
+  </div>
+<% end %>
+
 <%= form_with(model: @restaurant) do |f| %>
     <%= f.label("Name:") %>
     <%= f.text_field(:name) %> <br>
+    <%= f.label("Name Confirmation:") %>
+    <%= f.text_field(:name_confirmation) %> <br>
     <%= f.label("Cuisine") %>
     <%= f.text_field(:cuisine) %> <br>
     <%= f.label("Description:") %>
