cuisine model added

--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,5 +1,5 @@
 <h1><%= @restaurant.name_and_cuisine%></h1>
-<h2> <%= @restaurant.generate_stars %> </h2>
+<h2> <%= @restaurant.generate_stars %> - <%= @restaurant.generate_dollarsigns %></h2>
 
 <p> <%= @restaurant.description %></p>
 
