updated nav bar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,8 @@
     <%= link_to("All Restaurants", restaurants_path) %>
     <%= link_to("High Dollar Restaurants", high_dollar_restaurants_path) %>
     <%= link_to("New Restaurant", new_restaurant_path) %>
+    <%= link_to("All Cuisines", cuisines_path) %>
+    <%= link_to("New Cuisine", new_cuisine_path) %>
 
 
     <%= yield %>
