--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -11,6 +11,11 @@
     <input type="hidden" name="price" value="expensive">
     <input type="submit" value="Sort by Price">
 </form>
+<%= form_tag(restaurants_path, method:"get") do |f| %>
+    <%= label_tag("Search:") %>
+    <%= text_field_tag('search') %>
+    <%= submit_tag("Search") %>
+<% end %>
 
 <ul>
     <% @restaurants.each do |restaurant| %>
