--- a/app/views/cuisines/show.html.erb
+++ b/app/views/cuisines/show.html.erb
@@ -1,2 +1,9 @@
 <h1> <%= @cuisine.name %> </h1>
 
+<!-- <ul>
+    <%= render @cuisine.restaurants %>
+</ul> -->
+
+<% @cuisine.restaurants.each do |restaurant|%>
+ <li><%= link_to(name_and_cuisine(restaurant), restaurant_path(restaurant)) %> - <%= restaurant.generate_stars %> - <%= restaurant.generate_dollarsigns %></li>
+<% end %>
