--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,25 +1,23 @@
 <h1>Restaurants</h1>
 
 <form method="get" action="/restaurants">
-    <input type="hidden" name="expensive" value="expensive">
+    <input type="hidden" name="filter" value="expensive">
     <input type="submit" value="High Dollar">
 </form>
 
 <%# <a href="/restaurants?expensive=expensive">High Dollar</a> %>
 
 <form method="get" action="/restaurants">
-    <input type="hidden" name="price" value="expensive">
+    <input type="hidden" name="filter" value="price">
     <input type="submit" value="Sort by Price">
 </form>
 <%= form_tag(restaurants_path, method:"get") do |f| %>
     <%= label_tag("Search:") %>
-    <%= text_field_tag('search') %>
+    <%= text_field_tag('filter') %>
     <%= submit_tag("Search") %>
 <% end %>
 
 <ul>
-    <% @restaurants.each do |restaurant| %>
-        <li> <%= link_to(restaurant.name_and_cuisine, restaurant_path(restaurant)) %> - <%= restaurant.generate_stars %> - <%= restaurant.generate_dollarsigns %></li>
-    <% end%>
+   <%= render @restaurants %>
 </ul>
 
