--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -1,36 +1,3 @@
 <h1>New Restaurant</h1>
 
-<% if @restaurant.errors.any? %>
-  <div id="error_explanation">
-    <h2><%= pluralize(@restaurant.errors.count, "error") %> prohibited this restaurant from being saved:</h2>
-
-    <ul>
-      <% @restaurant.errors.each do |error| %>
-        <li><%= error.full_message %></li>
-      <% end %>
-    </ul>
-  </div>
-<% end %>
-
-<%= form_for(@restaurant) do |f| %>
-    <%= f.label("Name:") %>
-    <%= f.text_field(:name) %> <br>
-    <!-- <%= f.label("Cuisine") %>
-    <%= f.text_field(:cuisine) %> <br> -->
-    <%= f.label("Existing Cuisines:")%>
-    <!-- collection_select_args(params_key, collection, object_id, display in select ) -->
-    <%= f.collection_select(:cuisine_id, Cuisine.order(:name), :id, :name, prompt: true) %><br>
-    <%= f.fields_for :cuisine do |c|%>
-      <%= c.label("New Cuisine:")%> 
-      <%= c.text_field(:name) %> <br>
-    <% end %>
-    <%= f.label("Description:") %>
-    <%= f.text_area(:description) %> <br>
-    <%= f.label("Price:") %>
-    <%= f.select(:price, [1,2,3,4]) %> <br>
-    <%= f.label("Rating:") %>
-    <%= f.select(:rating, 1..5) %> <br>
-    <%= f.label("Chain:") %>
-    <%= f.select(:is_chain, [["Yes", true], ["No", false]]) %> <br>
-    <%= f.submit %>
-<% end %>
+<%= render partial: 'form'%>
