--- a/app/views/restaurants/_form.html.erb
+++ b/app/views/restaurants/_form.html.erb
@@ -5,15 +5,7 @@
 <%= form_for(@restaurant) do |f| %>
     <%= f.label("Name:") %>
     <%= f.text_field(:name) %> <br>
-    <!-- <%= f.label("Cuisine") %>
-    <%= f.text_field(:cuisine) %> <br> -->
-    <%= f.label("Existing Cuisines:")%>
-    <!-- collection_select_args(params_key, collection, object_id, display in select ) -->
-    <%= f.collection_select(:cuisine_id, Cuisine.order(:name), :id, :name, prompt: true) %><br>
-    <%= f.fields_for :cuisine do |c|%>
-      <%= c.label("New Cuisine:")%> 
-      <%= c.text_field(:name) %> <br>
-    <% end %>
+    <%= cuisine_select(f) %>
     <%= f.label("Description:") %>
     <%= f.text_area(:description) %> <br>
     <%= f.label("Price:") %>
