--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Restaurants</h1>
+<%= display_header(@cuisine)%>
 
 <form method="get" action="/restaurants">
     <input type="hidden" name="filter" value="expensive">
